Actions
Bug #9295
closed`Exception#backtrace_locations` returns `nil`
Bug #9295:
`Exception#backtrace_locations` returns `nil`
Description
=begin
If I raise an ArgumentError by calling a method with wrong number of arguments, Exception#backtrace_locations returns nil, which I think is a bug:
If, instead, I raise an error manually, then it returns an array as expected:
begin
raise ArgumentError.new
rescue => e
p e.backtrace_locations
end
# => ["this_file:2:in `<main>'"]
=end
Actions