* vm_insnhelper.c (argument_error): insert dummy frame to make   a backtrace object intead of modify backtrace string array.   [Bug #9295] * test/ruby/test_backtrace.rb: add a test for this patch.   fix test to compare a result of Exception#backtrace with   a result of Exception#backtrace_locations.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@44411 b2dd03c8-39d4-4d8f-98ff-823fe69b080e